--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,50 @@
-# OSX
-#
-.DS_Store
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
-# Xcode
+# expo
+.expo/
 #
-build/
+.vscode/
+
+# dependencies
+/node_modules
+
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+android/app/build
+android/.gradle
+ios/build
+/build
+.idea*
+*.iml
+ios/Pods
+.DS_Store*
+android/build
+android/.idea
+android/app/src/main/assets/crashlytics-build.properties
+android/app/src/main/res/values/com_crashlytics_export_strings.xml
+yarn.lock
+ios/Podfile.lock
+android/local.properties
+
+*/fastlane/report.xml
+*/fastlane/Preview.html
+*/fastlane/screenshots
+
+# Bundle artifact
+*.jsbundle
+package-lock.json
+
+
+#For iOS
+#For iOS
+# Xcode
+!**/*.xcodeproj
+!**/*.pbxproj
+!**/*.xcworkspacedata
+!**/*.xcsettings
+!**/*.xcscheme
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -19,38 +59,16 @@ xcuserdata
 DerivedData
 *.hmap
 *.ipa
+*.dSYM.zip
+*.dSYM
 *.xcuserstate
 project.xcworkspace
 
-# Android/IntelliJ
-#
-build/
-.idea
-.gradle
-local.properties
-*.iml
+# OS X
+.DS_Store
 
-# node.js
-#
-node_modules/
-npm-debug.log
-yarn-error.log
+# Root dir shouldn't have Xcode project
+/*.xcodeproj
 
-# BUCK
-buck-out/
-\.buckd/
-*.keystore
-
-# fastlane
-#
-# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
-# screenshots whenever they are needed.
-# For more information about the recommended setup visit:
-# https://docs.fastlane.tools/best-practices/source-control/
-
-*/fastlane/report.xml
-*/fastlane/Preview.html
-*/fastlane/screenshots
-
-# Bundle artifact
-*.jsbundle
+# ReactCommon subdir shouldn't have Xcode project
+/ReactCommon/**/*.xcodeproj
