--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.3.1",
+    "@types/react-navigation": "^3.0.1",
     "@types/react-redux": "^7.0.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
@@ -27,6 +28,7 @@
     "redux-saga": "^1.0.0"
   },
   "devDependencies": {
+    "@types/react-navigation": "^2.13.7",
     "@types/jest": "^23.3.13",
     "@types/react": "^16.7.20",
     "@types/react-native": "^0.57.29",
