--- a/ios/DemoAndroidProject/Info.plist
+++ b/ios/DemoAndroidProject/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Permission to get your location</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Permission to get your location</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Your message to user when the camera is accessed for the first time</string>
 	<key>NSPhotoLibraryUsageDescription</key>
