init sql database

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-sqlite-storage')
     compile project(':react-native-config')
     compile project(':react-native-camera')
     compile project(':react-native-vector-icons')
