--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-gesture-handler": "^1.0.12",
     "react-native-paper": "^2.4.0",
     "react-native-qrcode-scanner": "^1.1.2",
+    "react-native-sqlite-storage": "^3.3.9",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9",
     "react-navigation-material-bottom-tabs": "^1.0.0",
@@ -28,10 +29,11 @@
     "redux-saga": "^1.0.0"
   },
   "devDependencies": {
-    "@types/react-navigation": "^2.13.7",
     "@types/jest": "^23.3.13",
     "@types/react": "^16.7.20",
     "@types/react-native": "^0.57.29",
+    "@types/react-native-sqlite-storage": "^3.3.1",
+    "@types/react-navigation": "^2.13.7",
     "@types/react-test-renderer": "^16.0.3",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
